# ideal-goggles

./: CMakeLists.txt  README.md
src/: camera.cpp  camera.h  main.cpp  ppm.cpp  ppm.h  ray.h  renderer.cpp  renderer.h  scene.hpp  timer.cpp  timer.hpp
